--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
   "name": "juniper",
   "version": "1.0.0",
   "description": "a visual regression testing utility with backstopjs",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lounikffm/juniper.git"
+  },
+  "dependencies": {
+    "backstopjs": "^3.0.6",
+    "walk-sync": "^0.3.2"
+  }
 }
