--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.1",
   "description": "a visual regression testing utility with backstopjs",
   "main": "src/index.js",
+  "bin": "bin/jooniper",
   "scripts": {},
   "author": "",
   "license": "MIT",
+  "files": [
+    "bin",
+    "src"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/lounikffm/juniper.git"
