--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "backstopjs": "^3.0.6",
     "glob": "^7.1.2",
+    "mri": "^1.1.0",
     "rename-extension": "^2.0.2"
   }
 }
